imp: History Screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="----"
+            android:value="AIzaSyDPyv1IvN9rsXjpuiE52GLKJhPzSOKv2CQ"
             />
 
 
